--- a/tresorerie/encaissement-create.html
+++ b/tresorerie/encaissement-create.html
@@ -168,11 +168,7 @@
                 <img src="https://microfinance-ccm.com/iola/logo-blanc.png" alt="Multiflex" class="h-10">
             </div>
             <div class="flex-1 flex items-center justify-between px-6">
-                <div class="breadcrumb">
-                    <a href="./dashboard.html">Trésorerie</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <span>Nouveau Bon d'Encaissement</span>
-                </div>
+                <h1 class="text-xl font-bold text-[#1A1A1A]">Nouvel Encaissement Client</h1>
                 <div class="flex items-center gap-4">
                     <div class="relative">
                         <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
@@ -245,12 +241,12 @@
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
-                        Banque
+                        Acomptes
                     </div>
 
-                    <a href="./remise-transporteur.html" class="sidebar-link" data-page="remise-transporteur">
-                        <i class="fa-solid fa-truck-fast mr-3"></i>
-                        <span>Remise Transporteur</span>
+                    <a href="./acompte-transport.html" class="sidebar-link" data-page="acompte-transport">
+                        <i class="fa-solid fa-truck-ramp-box mr-3"></i>
+                        <span>Acompte Transport</span>
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">
@@ -266,7 +262,7 @@
 
             <!-- Main Content Area -->
             <div class="flex-1 overflow-auto bg-[#F8F9FA]">
-                <div class="tresorerie-container" style="max-width: 1000px; margin: 0 auto; padding: 24px;">
+                <div class="tresorerie-container" style="max-width: none; padding: 24px;">
 
                     <!-- Page Header with Document Number -->
                     <div class="page-header mb-4">
