--- a/tresorerie/journal-detail.html
+++ b/tresorerie/journal-detail.html
@@ -413,13 +413,7 @@
                 <img src="https://microfinance-ccm.com/iola/logo-blanc.png" alt="Multiflex" class="h-10">
             </div>
             <div class="flex-1 flex items-center justify-between px-6">
-                <div class="breadcrumb">
-                    <a href="./dashboard.html">Trésorerie</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <a href="./journals-list.html">Journaux</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <span id="journalCodeBreadcrumb">BNK-001</span>
-                </div>
+                <h1 class="text-xl font-bold text-[#1A1A1A]">Détail Journal de Trésorerie</h1>
                 <div class="flex items-center gap-4">
                     <div class="relative">
                         <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
@@ -492,12 +486,12 @@
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
-                        Banque
+                        Acomptes
                     </div>
 
-                    <a href="./remise-transporteur.html" class="sidebar-link" data-page="remise-transporteur">
-                        <i class="fa-solid fa-truck-fast mr-3"></i>
-                        <span>Remise Transporteur</span>
+                    <a href="./acompte-transport.html" class="sidebar-link" data-page="acompte-transport">
+                        <i class="fa-solid fa-truck-ramp-box mr-3"></i>
+                        <span>Acompte Transport</span>
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">
