--- a/tresorerie/journal-security.html
+++ b/tresorerie/journal-security.html
@@ -111,19 +111,10 @@
                 <img src="https://microfinance-ccm.com/iola/logo-blanc.png" alt="Multiflex" class="h-10">
             </div>
             <div class="flex-1 flex items-center justify-between px-6">
-                <div class="breadcrumb">
-                    <a href="./dashboard.html">Trésorerie</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <a href="./journals-list.html">Journaux</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <a href="./journal-detail.html?code=BNK-001">BNK-001</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <span>Paramètres de Sécurité</span>
-                </div>
+                <h1 class="text-xl font-bold text-[#1A1A1A]">Paramètres de Sécurité Journal</h1>
                 <div class="flex items-center gap-4">
-                    <div class="text-sm text-gray-500">
-                        <i class="fa-solid fa-user-tie mr-2"></i>
-                        Directeur Financier
+                    <div class="relative">
+                        <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
                     </div>
                     <div class="flex items-center cursor-pointer">
                         <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-2.jpg" class="w-8 h-8 rounded-full mr-3">
@@ -192,12 +183,12 @@
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
-                        Banque
+                        Acomptes
                     </div>
 
-                    <a href="./remise-transporteur.html" class="sidebar-link" data-page="remise-transporteur">
-                        <i class="fa-solid fa-truck-fast mr-3"></i>
-                        <span>Remise Transporteur</span>
+                    <a href="./acompte-transport.html" class="sidebar-link" data-page="acompte-transport">
+                        <i class="fa-solid fa-truck-ramp-box mr-3"></i>
+                        <span>Acompte Transport</span>
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">
@@ -213,7 +204,7 @@
 
             <!-- Main Content Area -->
             <div class="flex-1 overflow-auto bg-[#F8F9FA]">
-                <div class="tresorerie-container" style="max-width: 1000px; margin: 0 auto; padding: 24px;">
+                <div class="tresorerie-container" style="max-width: none; padding: 24px;">
 
                     <!-- Page Header -->
                     <div class="page-header mb-6">
