--- a/tresorerie/decaissement-create.html
+++ b/tresorerie/decaissement-create.html
@@ -235,11 +235,7 @@
                 <img src="https://microfinance-ccm.com/iola/logo-blanc.png" alt="Multiflex" class="h-10">
             </div>
             <div class="flex-1 flex items-center justify-between px-6">
-                <div class="breadcrumb">
-                    <a href="./dashboard.html">Trésorerie</a>
-                    <i class="fa-solid fa-chevron-right"></i>
-                    <span>Nouvel Ordre de Décaissement</span>
-                </div>
+                <h1 class="text-xl font-bold text-[#1A1A1A]">Nouvel Ordre de Décaissement</h1>
                 <div class="flex items-center gap-4">
                     <div class="relative">
                         <i class="fa-solid fa-bell text-[#666666] text-lg cursor-pointer"></i>
@@ -247,7 +243,7 @@
                     <div class="flex items-center cursor-pointer">
                         <img src="https://storage.googleapis.com/uxpilot-auth.appspot.com/avatars/avatar-2.jpg" class="w-8 h-8 rounded-full mr-3">
                         <span class="text-[14px] text-[#1A1A1A] mr-2">Jean KAMGA</span>
-                        <span class="text-xs text-[#6B7280]">Comptable Fournisseur</span>
+                        <i class="fa-solid fa-chevron-down text-[#666666] text-sm"></i>
                     </div>
                 </div>
             </div>
@@ -269,8 +265,8 @@
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">Décaissements</div>
                     <a href="./decaissement-create.html" class="sidebar-link active" data-page="decaissement-create"><i class="fa-solid fa-arrow-up mr-3"></i><span>Nouveau Décaissement</span></a>
                     <a href="./validation-double-signature.html" class="sidebar-link" data-page="validation-double-signature"><i class="fa-solid fa-signature mr-3"></i><span>Double Signature</span><span class="ml-2 bg-[#F26F21] text-white text-xs px-2 py-0.5 rounded-full">2</span></a>
-                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">Banque</div>
-                    <a href="./remise-transporteur.html" class="sidebar-link" data-page="remise-transporteur"><i class="fa-solid fa-truck-fast mr-3"></i><span>Remise Transporteur</span></a>
+                    <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">Acomptes</div>
+                    <a href="./acompte-transport.html" class="sidebar-link" data-page="acompte-transport"><i class="fa-solid fa-truck-ramp-box mr-3"></i><span>Acompte Transport</span></a>
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">Système</div>
                     <a href="../index.html" class="sidebar-link" data-page="home"><i class="fa-solid fa-home mr-3"></i><span>Accueil</span></a>
                 </nav>
@@ -278,7 +274,7 @@
 
             <!-- Main Content Area -->
             <div class="flex-1 overflow-auto bg-[#F8F9FA]">
-                <div class="tresorerie-container" style="max-width: 1100px; margin: 0 auto; padding: 24px;">
+                <div class="tresorerie-container" style="max-width: none; padding: 24px;">
 
                     <!-- Document Header -->
                     <div class="document-header">
