--- a/tresorerie/journals-list.html
+++ b/tresorerie/journals-list.html
@@ -391,12 +391,12 @@
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-4 mb-2">
-                        Banque
+                        Acomptes
                     </div>
 
-                    <a href="./remise-transporteur.html" class="sidebar-link" data-page="remise-transporteur">
-                        <i class="fa-solid fa-truck-fast mr-3"></i>
-                        <span>Remise Transporteur</span>
+                    <a href="./acompte-transport.html" class="sidebar-link" data-page="acompte-transport">
+                        <i class="fa-solid fa-truck-ramp-box mr-3"></i>
+                        <span>Acompte Transport</span>
                     </a>
 
                     <div class="px-4 py-2 text-[12px] font-semibold text-white/60 uppercase tracking-wider mt-6 mb-2">
